// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render VTeams Item or Title Should render Last Item with comma 1`] = `
<li
  className="abc-duty-details__vteams-item"
  data-lego="react"
  style={Object {}}
>
  vteams item,
</li>
`;

exports[`Should render VTeams Item or Title Should render VTeams Item 1`] = `
<li
  className="abc-duty-details__vteams-item"
  data-lego="react"
  style={Object {}}
>
  vteams item
</li>
`;
